--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,7 @@
 .grid {
   width: 200px;
   height: 400px;
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
   grid-template-columns: repeat(10, 20px); /* 10 colunas de 20px */
   grid-template-rows: repeat(20, 20px); /* 20 linhas de 20px */
   background-color: rgb(186, 220, 255);
