--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+.container {
+  display: flex;
+}
+
 .grid {
   width: 200px;
   height: 400px;
@@ -8,6 +12,20 @@
 }
 
 .grid div {
+  height: 20px;
+  width: 20px;
+}
+
+.mini-grid {
+  margin-left: 50px;
+  width: 80px;
+  height: 80px;
+  display: flex;
+  flex-wrap: wrap;
+  background-color: rgb(186, 220, 255);
+}
+
+.mini-grid div {
   height: 20px;
   width: 20px;
 }
